Package_Tools/glib/package/glib/gmain.inc


procedure g_clear_handle_id(tag_ptr: Pguint; clear_func: TGClearHandleFunc); cdecl; external libglib2;
function g_timeout_add_full(priority: Tgint; interval: Tguint; _function: TGSourceFunc; Data: Tgpointer; notify: TGDestroyNotify): Tguint; cdecl; external libglib2;
function g_timeout_add(interval: Tguint; _function: TGSourceFunc; Data: Tgpointer): Tguint; cdecl; external libglib2;
function g_timeout_add_once(interval: Tguint; _function: TGSourceOnceFunc; Data: Tgpointer): Tguint; cdecl; external libglib2;
function g_timeout_add_seconds_full(priority: Tgint; interval: Tguint; _function: TGSourceFunc; Data: Tgpointer; notify: TGDestroyNotify): Tguint; cdecl; external libglib2;
function g_timeout_add_seconds(interval: Tguint; _function: TGSourceFunc; Data: Tgpointer): Tguint; cdecl; external libglib2;
function g_timeout_add_seconds_once(interval: Tguint; _function: TGSourceOnceFunc; Data: Tgpointer): Tguint; cdecl; external libglib2;
function g_child_watch_add_full(priority: Tgint; pid: TGPid; _function: TGChildWatchFunc; Data: Tgpointer; notify: TGDestroyNotify): Tguint; cdecl; external libglib2;
function g_child_watch_add(pid: TGPid; _function: TGChildWatchFunc; Data: Tgpointer): Tguint; cdecl; external libglib2;
function g_idle_add(_function: TGSourceFunc; Data: Tgpointer): Tguint; cdecl; external libglib2;
function g_idle_add_full(priority: Tgint; _function: TGSourceFunc; Data: Tgpointer; notify: TGDestroyNotify): Tguint; cdecl; external libglib2;
function g_idle_add_once(_function: TGSourceOnceFunc; Data: Tgpointer): Tguint; cdecl; external libglib2;
function g_idle_remove_by_data(Data: Tgpointer): Tgboolean; cdecl; external libglib2;
procedure g_main_context_invoke_full(context: PGMainContext; priority: Tgint; _function: TGSourceFunc; Data: Tgpointer; notify: TGDestroyNotify); cdecl; external libglib2;
procedure g_main_context_invoke(context: PGMainContext; _function: TGSourceFunc; Data: Tgpointer); cdecl; external libglib2;

var
  g_timeout_funcs: TGSourceFuncs; cvar;external libglib2;
  g_child_watch_funcs: TGSourceFuncs; cvar; external libglib2;
  g_idle_funcs: TGSourceFuncs; cvar;external libglib2;
  {$IFDEF Linux}
  g_unix_signal_funcs: TGSourceFuncs;external libglib2;
  g_unix_fd_source_funcs: TGSourceFuncs;external libglib2;
  {$ENDIF}


  function g_main_new(is_running : Tgboolean) : PGMainLoop;
  procedure g_main_run(loop : PGMainLoop);
  procedure g_main_quit(loop : PGMainLoop);
  procedure g_main_destroy(loop : PGMainLoop);
  function g_main_is_running(loop : PGMainLoop) : Tgboolean;
  function g_main_iteration(may_block : Tgboolean) : Tgboolean;
  function g_main_pending : Tgboolean;
  procedure g_main_set_poll_func(func : TGPollFunc);

  // === Konventiert am: 7-8-24 16:29:09 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}

function g_main_new(is_running: Tgboolean): PGMainLoop;
begin
  g_main_new:=g_main_loop_new(nil,is_running);
end;

procedure g_main_run(loop: PGMainLoop);
begin
  g_main_loop_run(loop);
end;

procedure g_main_quit(loop: PGMainLoop);
begin
  g_main_loop_quit(loop);
end;

procedure g_main_destroy(loop: PGMainLoop);
begin
  g_main_loop_unref(loop);
end;

function g_main_is_running(loop: PGMainLoop): Tgboolean;
begin
  g_main_is_running:=g_main_loop_is_running(loop);
end;

function g_main_iteration(may_block: Tgboolean): Tgboolean;
begin
  g_main_iteration:=g_main_context_iteration(nil,may_block);
end;

function g_main_pending: Tgboolean;
begin
  g_main_pending:=g_main_context_pending(nil);
end;

procedure g_main_set_poll_func(func: TGPollFunc);
begin
  g_main_context_set_poll_func(nil,func);
end;




{$ENDIF read_implementation}
